# Discord-audio-bot

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  listadecomandos.py  main.py  pyproject.toml  webserver.py
.upm/: store.json  store.json174777396
src/: listadecomandos.py  main.py  structure.json  webserver.py
templates/: form.html
